--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,10 +1,10 @@
-// Place all the styles related to the Recipes controller here.
+// Place all the styles related to the Blogs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-#recipe_ingredients {
+#blog_description {
   height: 200px;
 }
-#recipe_preparation {
+
+#blog_content {
   height: 400px;
 }
