--- a/app/views/gardenings/index.html.erb
+++ b/app/views/gardenings/index.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h1>Gartentipps</h1>
+  <div class="col-md-12">
+    <div class="index_header">
+      <h1>Gartentipps</h1>
+    </div>
     <table class="table">
       <tbody>
         <% @gardenings.each do |gardening| %>
@@ -9,9 +11,9 @@
             <td><%= link_to gardening.name, gardening_path(gardening) %></td>
             <td><%= link_to gardening.description.html_safe, gardening_path(gardening) %></td>
             <% if logged_in? %>
-            <td><span class="glyphicon glyphicon-eye-<%= gardening.published ? "open" : "close" %>"></span></td>
-            <td><%= link_to '', edit_gardening_path(gardening), class: "glyphicon glyphicon-pencil" %></td>
-            <td><%= link_to '', gardening, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove" %></td>
+            <td class="index_action_td"><span class="glyphicon glyphicon-eye-<%= gardening.published ? "open" : "close" %>"></span></td>
+            <td class="index_action_td"><%= link_to '', edit_gardening_path(gardening), class: "glyphicon glyphicon-pencil" %></td>
+            <td class="index_action_td"><%= link_to '', gardening, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove" %></td>
             <% end %>
           </tr>
         <% end %>
