--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h1>Rezepte</h1>
+  <div class="col-md-12">
+    <div class="index_header">
+      <h1>Rezepte</h1>
+    </div>
     <table class="table">
       <tbody>
         <% @recipes.each do |recipe| %>
@@ -9,9 +11,9 @@
             <td><%= link_to recipe.name, recipe_path(recipe) %></td>
             <td><%= link_to recipe.description.html_safe, recipe_path(recipe) %></td>
             <% if logged_in? %>
-            <td><span class="glyphicon glyphicon-eye-<%= recipe.published ? "open" : "close" %>"></span></td>
-            <td><%= link_to '', edit_recipe_path(recipe), class: "glyphicon glyphicon-pencil" %></td>
-            <td><%= link_to '', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove" %></td>
+            <td class="index_action_td"><span class="glyphicon glyphicon-eye-<%= recipe.published ? "open" : "close" %>"></span></td>
+            <td class="index_action_td"><%= link_to '', edit_recipe_path(recipe), class: "glyphicon glyphicon-pencil" %></td>
+            <td class="index_action_td"><%= link_to '', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove" %></td>
             <% end %>
           </tr>
         <% end %>
