--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,11 +5,18 @@
 </div>
 <div class="row">
   <% if @recipe.pictures.any? %>
-  <div class="col-md-3">
-    <% @recipe.pictures.each_with_index do |p, idx| %>
+  <div class="col-md-3 hidden-xs hidden-sm">
+    <% @recipe.pictures.each do |p| %>
     <div class="show_picture">
-      <%= link_to image_tag(picture_path(p.id, size: "small")), url_for({controller: 'pictures', :action => 'show', id: p.id}), local: true, data: {lightbox: "image_group", title: ""} %>
+      <%= link_to image_tag(picture_path(p.id, size: "small")), picture_path(p.id), local: true, data: {lightbox: "image_group", title: ""} %>
     </div>
+    <% end %>
+  </div>
+  <div class="col-md-3 visible-xs visible-sm show_small_pics">
+    <% @recipe.pictures.each do |p| %>
+      <div class="show_small_picture">
+        <%= link_to image_tag(picture_path(p.id, size: "thumbnail")), picture_path(p.id, size: 'small'), local: true, data: {lightbox: "image_group", title: ""} %>
+      </div>
     <% end %>
   </div>
   <div class="col-md-9">
