--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,6 +9,7 @@
 body {
   padding-top: 60px;
   overflow-y: scroll;
+  font-size: 0.8vw;
 }
 
 body * {
@@ -52,17 +53,24 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   text-align: center;
   margin-bottom: 30px;
+  font-size: 1.5vw;
 }
 
 h2 {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  font-size: 1.3vw;
+}
+
+h3 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 1.1vw;
 }
 
 p {
-  font-size: 1.1em;
   line-height: 1.7em;
 }
 
@@ -101,7 +109,6 @@ $gray-medium-light: #eaeaea;
     font-style: italic;
     font-weight: bold;
     letter-spacing: 2pt;
-    font-size: 110%;
 
     color: rgb(185, 53, 0);
     &:visited { color: rgb(185, 53, 0); }
@@ -125,11 +132,8 @@ $gray-medium-light: #eaeaea;
 }
 
 .show_description, .show_ingredients, .show_preparation, .show_content, .show_related {
-  h1 {
-    font-size: 200%;
-    text-align: left;
-  };
   margin-bottom: 50px;
+  h1 { text-align: left; };
 }
 
 .show_picture {
@@ -145,6 +149,17 @@ $gray-medium-light: #eaeaea;
   width: 50px;
   height: 100px;
   overflow: hidden;
+}
+
+.show_actions {
+  margin-left: 10px;
+
+  a {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 0.8vw;
+    margin-left: 0px;
+  };
 }
 
 .delete_picture {
