--- a/app/views/gardenings/show.html.erb
+++ b/app/views/gardenings/show.html.erb
@@ -1,6 +1,14 @@
 <div class="row">
   <div class="col-md-12 show_header">
-    <h1><%= @gardening.name %></h1>
+    <h1>
+      <%= @gardening.name %>
+      <% if logged_in? %>
+      <span class="show_actions">
+        <%= link_to '', edit_gardening_path(@gardening), class: "glyphicon glyphicon-pencil" %>
+        <%= link_to '', @gardening, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove" %>
+      </span>
+      <% end %>
+    </h1>
   </div>
 </div>
 <div class="row">
