--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -23,7 +23,7 @@
   <div class="col-md-3 visible-xs visible-sm show_small_pics">
     <% @blog.pictures.each do |p| %>
       <div class="show_small_picture">
-        <%= link_to image_tag(picture_path(p.id, size: "thumbnail")), picture_path(p.id, size: 'small'), local: true, data: {lightbox: "image_group", title: ""} %>
+        <%= link_to image_tag(picture_path(p.id, size: "thumbnail")), picture_path(p.id, size: 'small'), local: true, data: {lightbox: "image_group_small", title: ""} %>
       </div>
     <% end %> 
   </div>
@@ -39,5 +39,11 @@
     <div class="show_content">
       <%= @blog.content.html_safe %>
     </div>
+    <% if @related.present? %>
+    <div class="show_related">
+      <h1>Verwandte Links</h1>
+      <%= @related.html_safe %>
+    </div>
+    <% end %>
   </div>
 </div>
