--- a/app/views/gardenings/show.html.erb
+++ b/app/views/gardenings/show.html.erb
@@ -23,7 +23,7 @@
   <div class="col-md-3 visible-xs visible-sm show_small_pics">
     <% @gardening.pictures.each do |p| %>
       <div class="show_small_picture">
-        <%= link_to image_tag(picture_path(p.id, size: "thumbnail")), picture_path(p.id, size: 'small'), local: true, data: {lightbox: "image_group", title: ""} %>
+        <%= link_to image_tag(picture_path(p.id, size: "thumbnail")), picture_path(p.id, size: 'small'), local: true, data: {lightbox: "image_group_small", title: ""} %>
       </div>
     <% end %> 
   </div>
@@ -40,9 +40,11 @@
       <h1>Zubereitung</h1>
       <%= @gardening.content.html_safe %>
     </div>
+    <% if @related.present? %>
     <div class="show_related">
       <h1>Verwandte Links</h1>
       <%= @related.html_safe %>
     </div>
+    <% end %>
   </div>
 </div>
