--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -10,17 +10,17 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :description %>
+    <%= form.label :description %><div data-tooltip-content="#markdown-info" class="glyphicon glyphicon-info-sign markdown-tooltip"></div>
     <%= form.text_area :description, id: :recipe_description, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :ingredients %>
+    <%= form.label :ingredients %><div data-tooltip-content="#markdown-info" class="glyphicon glyphicon-info-sign markdown-tooltip"></div>
     <%= form.text_area :ingredients, id: :recipe_ingredients, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :preparation %>
+    <%= form.label :preparation %><div data-tooltip-content="#markdown-info" class="glyphicon glyphicon-info-sign markdown-tooltip"></div>
     <%= form.text_area :preparation, id: :recipe_preparation, class: "form-control" %>
   </div>
 
